--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://viggidbest.github.io/weatherapp-react",
+  "homepage": "https://viggidbest.github.io/weatherapp-react",
   "name": "weatherapp",
   "version": "0.1.0",
   "private": true,
